--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
-    <div class="centered-as-fuck loading">
+    <div class="centered-af loading">
       <div class="whirly">
       Loading...
       </div>
