--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HiveMind</title>
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <link rel="stylesheet" href="css/whirly.css" type="text/css">
+    <link rel="stylesheet" href="css/wobblebar.css" type="text/css">
     <link href="css/main.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:700' rel='stylesheet' type='text/css'>
 
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="centered-af loading">
-      <div class="whirly">
+      <div class="wobblebar">
       Loading...
       </div>
     </div>
@@ -44,13 +44,13 @@
             </div>
           </div>
           <div class="row analysis hidden">
-            <div class="col-xs-2">
-              <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
+            <div class="col-xs-1">
+              <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
             </div>
-            <div class="col-xs-8">
+            <div class="col-xs-10">
               <div class="progress">
-                <div class="progress-bar progress-bar-danger" style="width: 0%"></div>
                 <div class="progress-bar progress-bar-success" style="width: 0%"></div>
+                <div class="progress-bar progress-bar-danger" style="width: 0%"></div>
               </div>
               <div class="row">
                 <div class="col-xs-12">
@@ -58,15 +58,17 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-2">
-              <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
+            <div class="col-xs-1">
+              <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
             </div>
           </div>
           <div class="articles row hidden">
             <div class="col-lg-8 articles-holder">
             </div>
-            <div class="col-lg-3 related">
+            <div class="col-lg-4 related">
               <h2>Related</h2>
+              <div class="list-group">
+              </div>
             </div>
           </div>
         </div>
