--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
-    <div class="centered-af loading">
+    <div class="centered-af loading hidden">
       <div class="wobblebar">
       Loading...
       </div>
@@ -43,7 +43,7 @@
               <button type="button" class="swarm btn btn-danger btn-lg btn-block">Swarm</button>
             </div>
           </div>
-          <div class="row analysis hidden">
+          <div class="row analysis body-section">
             <div class="col-xs-1">
               <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
             </div>
@@ -62,16 +62,14 @@
               <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
             </div>
           </div>
-          <div class="articles row hidden">
+          <div class="articles row body-section">
             <div class="col-lg-8 articles-holder">
             </div>
             <div class="col-lg-4 related">
-              <h2>Related</h2>
-              <div class="list-group">
+              <div class="list-group hidden">
               </div>
             </div>
           </div>
-        </div>
         </div>
         <div class="col-xs-2"></div>
       </div>
