--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>HiveMind</title>
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <link rel="stylesheet" href="css/wobblebar.css" type="text/css">
+    <link rel="stylesheet" href="css/dots.css" type="text/css">
+    <link rel="stylesheet" href="css/dots.css" type="text/css">
     <link href="css/main.css" rel="stylesheet" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:700' rel='stylesheet' type='text/css'>
 
@@ -22,7 +23,7 @@
   </head>
   <body>
     <div class="centered-af loading hidden">
-      <div class="wobblebar">
+      <div class="dots">
       Loading...
       </div>
     </div>
@@ -44,10 +45,10 @@
             </div>
           </div>
           <div class="row analysis body-section">
-            <div class="col-xs-1">
+            <div class="col-sm-1 col-xs-hidden">
               <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
             </div>
-            <div class="col-xs-10">
+            <div class="col-xs-12 col-sm-10">
               <div class="progress">
                 <div class="progress-bar progress-bar-success" style="width: 0%"></div>
                 <div class="progress-bar progress-bar-danger" style="width: 0%"></div>
@@ -58,7 +59,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-sm-1 col-xs-hidden">
               <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
             </div>
           </div>
