--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <button type="button" class="swarm btn btn-danger btn-lg btn-block">Swarm</button>
             </div>
           </div>
-          <div class="row analysis body-section">
+          <div class="row analysis body-section hidden">
             <div class="col-sm-1 col-xs-hidden">
               <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
             </div>
@@ -63,10 +63,11 @@
               <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
             </div>
           </div>
-          <div class="articles row body-section">
+          <div class="articles row body-section hidden">
             <div class="col-lg-8 articles-holder">
             </div>
             <div class="col-lg-4 related">
+              <h2>Related</h2>
               <div class="list-group hidden">
               </div>
             </div>
