--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </div>
     <div class="body container-fluid">
       <div class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8 col-xs-12">
           <div class="row">
             <div class="col-xs-4 col-xs-offset-4">
               <img src="img/hm.png" class="img-responsive img-center logo" alt="HiveMind Logo">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="row analysis body-section hidden">
-            <div class="col-sm-1 col-xs-hidden">
+            <div class="col-sm-1 hidden-xs">
               <img src="img/like.png" class="img-responsive like svg-img" alt="Like">
             </div>
             <div class="col-xs-12 col-sm-10">
@@ -59,7 +59,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-1 col-xs-hidden">
+            <div class="col-sm-1 hidden-xs">
               <img src="img/dislike.png" class="img-responsive dislike svg-img" alt="Dislike">
             </div>
           </div>
@@ -73,7 +73,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-2"></div>
+        <div class="col-lg-2"></div>
       </div>
     </div>
   </body>
